Issue #7541: add RightCurlyAloneOrEmptyCheck for google style